# XAI_methods

./: .gitignore  README.md  Rapport-FilsRouge.docx  pyproject.toml  requirements.txt
Notebooks/: CyberSecurity.ipynb  XAI_methods.ipynb  parkinson_telemonitoring.ipynb  requirements.txt
data/: all_df_degree.csv  all_test_degree.csv  content_features_test.csv  content_features_train.csv  df_feature_test.json  f1_score.csv
data_sdc/: all_df.csv  all_test.csv
dataset_CyberSecurity/: test_set_metadata_to_predict.csv
notebooks_DC/: 0-Exploration.ipynb  4-Explicabilité_for_sdc_04042025.ipynb  4-Explicability.ipynb
src/saan_xai/: ale.py  lime.py  pdp.py  shap.py
