[project]
name = "saan_xai"
version = "0.1.0"
description = "Create easy plots for ML explainability"
authors = [
    {name = "Mathilde Boucly", email = "mathilde.boucly@safrangroup.com"},
    {name = "Michel Daher Mansour", email = "michel.daher-manson@safrangroup.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ipykernel~=6.29.5",
    "ipywidgets~=8.1.7",
    "lime==0.2.0.1",
    "lofo-importance==0.3.5",
    "matplotlib~=3.10.3",
    "numpy<2",
    "scikit-learn~=1.7.0",
    "seaborn~=0.13.2",
    "shap~=0.47.2",
    "ucimlrepo==0.0.7",
    "xgboost~=3.0.2",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
